fixed text align to left

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,7 +1,7 @@
 body {
     font-family: arial, helvetica, sans-serif;
     font-size: 14px;
-    text-align: right;
+    text-align: left;
     color: black;
     background-color: #fff;
     margin: 20px;
